<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.practicaltest02.view.PracticalTest02MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/server"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/server_port_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_port"/>

        </ScrollView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/connect"/>

        </ScrollView>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/client"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/client_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_address"/>

        </ScrollView>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/client_port_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/client_port"/>

        </ScrollView>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2">

        <Button
            android:id="@+id/lookup_button"
            android:layout_width="121dp"
            android:layout_height="86dp"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:text="@string/lookup" />

        <EditText
            android:id="@+id/word_edit_text"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:hint="@string/insert" />

    </GridLayout>

    <TextView
        android:id="@+id/weather_forecast_text_view"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:maxLines="10" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ScrollView>

</LinearLayout>
